packages/cashc/test/compiler/ParseError/compound_assign_in_expression.cash
contract CompoundAssignInExpression() {
    function spend() {
        int i = 0;
        int x = i++;
        require(x == 0);
    }
}
